--- a/html/Release_Notes.html
+++ b/html/Release_Notes.html
@@ -14,7 +14,17 @@ valign=baseline bgcolor="#e7ebf7"><b>Hydrogeological Toolbox</b></td></tr></tabl
 <hr>
 
 
-<h2>Version 2.05</h2>
+<h2>Version 2.06</h2>  
+<p>November 2017
+<p>This version is the one corresponding to the paper "Hytool: an open source 
+matlab toolbox for the interpretation of hydraulic tests using analytical solutions" 
+accepted for publication in the Journal of Open Source Software.
+Note that the license has been changed to MIT license. A few minor issues have 
+been corrected. In particular some Community guidelines have been added on 
+the GitHub page of the project.
+
+
+<h2>Version 2.05</h2>  
 <p>June 2017
 <p>This version contains a rather long series of
    minor bug fixes and adaptation to the release 2017
