bug fix in documentation

--- a/html/examples.html
+++ b/html/examples.html
@@ -45,7 +45,7 @@ the <b>Help Navigator</b> window.
 <p>
 <a href="tmr_dmo.html">Superposition of the Theis (1935) solution</a><br>
 <a href="birsoy_dmo.html">Deconvolution with Birsoy and Summers (1980) time</a><br>
-<a href="ago_dmo.html">Recovery test using Agarwal (1980) time.</a>
+<a href="aga_dmo.html">Recovery test using Agarwal (1980) time.</a>
 </p>
 
 <h1>Other tests</h1>
