bug fixes in documentation

--- a/html/waw_rpt.html
+++ b/html/waw_rpt.html
@@ -26,7 +26,11 @@
  
     t = measured time
     s = measured drawdown
-    q = Pumping rate
+ 
+    d(1) = Q = Pumping rate
+    d(2) = rc = Radius of the casing
+    d(2) = rw = Radius of the screen
+ 
     ttle = Title of the figure 
  
 </pre>
